Fix DBCustomSelect jumping placeholder issue by replacing CSS :has() selector with JavaScript conditional rendering

--- a/packages/components/src/components/custom-select/custom-select.scss
+++ b/packages/components/src/components/custom-select/custom-select.scss
@@ -51,12 +51,6 @@
 		);
 	}
 
-	&:has(summary span) {
-		[id$="-placeholder"] {
-			display: none;
-		}
-	}
-
 	/* custom elements workaround */
 	> db-button > .db-button[data-icon="cross"][data-variant="ghost"],
 	> .db-button[data-icon="cross"][data-variant="ghost"] {
